<resources>
    <string name="app_name">Gibbr Fill</string>
    <string name="app_text">Welcome to Gibbr Fill I will ask you to fill in words to complete a story. You won\'t be able to see the whole story until you are done filling in all the missing words. That\'s part of fun. Click below to get started...</string>
    <string name="button_text">Let\'s Play..!!!</string>
    <string name="fill_in_headline">Complete the Story...!!!</string>
    <string name="words_left">7 word(s) left.</string>
    <string name="button_fillin_text">Ok</string>
    <string name="fillin_text">Fill a noun</string>
    <string name="complete_story">demotext</string>
    <string name="complete_story_headline">Your Gibbr fill story is...!!!</string>
</resources>
