<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.gurmandeep.gibbrfill.FillInActivity">

    <TextView
        android:id="@+id/textview_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold"
        android:background="@color/colorLightBlueA700"
        android:textColor="@color/ColorWhite"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/textview_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/fill_in_headline"
        android:layout_below="@+id/textview_1"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/layout_margin_top"
        android:textSize="@dimen/text_size"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/textview_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_2"
        android:text="@string/words_left"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/layout_edittext_margin_top"
        android:textSize="@dimen/text_size"
        android:textColor="@color/colorBlack"/>

    <EditText
        android:id="@+id/edittext_1"
        android:layout_width="@dimen/layout_width"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:drawableBottom="@color/colorBlack"
        android:layout_below="@+id/textview_3" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_fillin_text"
        android:layout_toRightOf="@+id/edittext_1"
        android:layout_below="@+id/textview_3"
        android:layout_marginLeft="@dimen/layout_margin_left_fillin"
        android:layout_marginRight="@dimen/layout_margin_left_fillin"/>

    <TextView
        android:id="@+id/textview_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fillin_text"
        android:layout_below="@+id/edittext_1"
        android:layout_centerInParent="true"
        android:textColor="@color/colorRed"/>
</RelativeLayout>
