<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gurmandeep.gibbrfill.CompleteStory">

    <TextView
        android:id="@+id/textview_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold"
        android:background="@color/colorLightBlueA700"
        android:textColor="@color/ColorWhite"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"/>

      <TextView
          android:id="@+id/textview_2"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/complete_story_headline"
          android:textColor="@color/colorBlack"
          android:layout_below="@+id/textview_1"
          android:paddingBottom="@dimen/activity_vertical_margin"
          android:paddingLeft="@dimen/activity_horizontal_margin"
          android:paddingRight="@dimen/activity_horizontal_margin"
          android:paddingTop="@dimen/activity_vertical_margin"
          android:gravity="center"/>

    <TextView
        android:id="@+id/textview_3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/complete_story"
        android:textColor="@color/colorBlack"
        android:layout_below="@+id/textview_2"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"/>

</RelativeLayout>
