<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gurmandeep.gibbrfill.WelcomeActivity">

    <TextView
        android:id="@+id/textview_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold"
        android:background="@color/colorLightBlueA700"
        android:textColor="@color/ColorWhite"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"/>

    <ImageView
        android:id="@+id/imageview_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/gibbr"
        android:layout_below="@+id/textview_1"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/layout_margin_top"/>

    <TextView
        android:id="@+id/textview_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_text"
        android:layout_below="@+id/imageview_1"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin_left"
        android:layout_marginRight="@dimen/layout_margin_right"
        android:layout_marginTop="@dimen/button_margin_top"
        android:text="@string/button_text"
        android:textColor="@color/ColorWhite"
        android:textAllCaps="false"
        android:textSize="@dimen/button_text_size"
        android:background="@color/colorLightBlueA700"
        android:layout_below="@+id/textview_2"/>


</RelativeLayout>
